[B]Version 1.1.89[/B]
XFreeHD - Fix playback
Perverzija - Fix video playback