@@ -1,12 +1,10 @@
-# Function from Resolveurl
+# Function from Resolveurl, edited for modern current browsers
 
-# import xbmcaddon
 import random
 import time
 import six
 from resources.lib.basics import addon
 
-# addon = xbmcaddon.Addon('script.module.resolveurl')
 get_setting = addon.getSetting
 
 
@@ -16,32 +14,36 @@ def set_setting(id, value):
     addon.setSetting(id, value)
 
 
-BR_VERS = [
-    ['%s.0' % i for i in range(80, 103)],
-    ['75.0.3770.80', '76.0.3809.100', '78.0.3904.97', '79.0.3945.88', '80.0.3987.149',
-     '81.0.4044.92', '83.0.4103.116', '84.0.4147.135', '86.0.4240.75', '90.0.4430.72',
-     '91.0.4472.147', '101.0.0.0', '102.0.0.0', '106.0.0.0'],
-    ['84.0.4147.135', '86.0.4240.75', '90.0.4430.72',
-     '91.0.4472.147', '101.0.0.0', '102.0.0.0', '106.0.0.0']
-]
-WIN_VERS = ['Windows NT 10.0', 'Windows NT 7.0', 'Windows NT 6.3', 'Windows NT 6.2']
-FEATURES = ['; WOW64', '; Win64; x64', '']
-RAND_UAS = [
-    'Mozilla/5.0 ({win_ver}{feature}; rv:{br_ver}) Gecko/20100101 Firefox/{br_ver}',
-    'Mozilla/5.0 ({win_ver}{feature}) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/{br_ver} Safari/537.36',
-    'Mozilla/5.0 ({win_ver}{feature}) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/{br_ver} Safari/537.36 Edg/{br_ver}'
-]
+def generate_ua():
+    BR_VERS = {
+        'Firefox': ['%s.0' % i for i in range(90, 118)],
+        'Chrome': ['%s.0.0.0' % i for i in range(90, 117)],
+        'Edge': ['%s.0.0.0' % i for i in range(90, 117)]
+    }
+    WIN_VERS = ['Windows NT 10.0', 'Windows NT 6.3', 'Windows NT 6.2']
+    FEATURES = ['; WOW64', '; Win64; x64', '']
+    RAND_UAS = [
+        'Mozilla/5.0 ({os_ver}{feature}; rv:{br_ver}) Gecko/20100101 Firefox/{br_ver}',
+        'Mozilla/5.0 ({os_ver}{feature}) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/{br_ver} Safari/537.36',
+        'Mozilla/5.0 ({os_ver}{feature}) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/{br_ver} Safari/537.36 Edg/{br_ver}'
+    ]
+
+    browser = random.choice(list(BR_VERS.keys()))
+    os_ver = random.choice(WIN_VERS)
+    feature = random.choice(FEATURES)
+    br_ver = random.choice(BR_VERS[browser])
+
+    user_agent_template = next((ua for ua in RAND_UAS if browser.lower() in ua.lower()), RAND_UAS[0])
+    return user_agent_template.format(os_ver=os_ver, feature=feature, br_ver=br_ver)
 
 
 def get_ua():
     try:
         last_gen = int(get_setting('last_ua_create'))
-    except:
+    except Exception:
         last_gen = 0
     if not get_setting('current_ua') or last_gen < (time.time() - (7 * 24 * 60 * 60)):
-        index = random.randrange(len(RAND_UAS))
-        versions = {'win_ver': random.choice(WIN_VERS), 'feature': random.choice(FEATURES), 'br_ver': random.choice(BR_VERS[index])}
-        user_agent = RAND_UAS[index].format(**versions)
+        user_agent = generate_ua()
         set_setting('current_ua', user_agent)
         set_setting('last_ua_create', str(int(time.time())))
     else:
@@ -50,10 +52,7 @@ def get_ua():
 
 
 def force_ua():
-    index = random.randrange(len(RAND_UAS))
-    versions = {'win_ver': random.choice(WIN_VERS), 'feature': random.choice(FEATURES), 'br_ver': random.choice(BR_VERS[index])}
-    user_agent = RAND_UAS[index].format(**versions)
-    return user_agent
+    return generate_ua()
 
 
 def set_ua(ua):
